--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,92 +1,39 @@
-<!DOCTYPE html>
-<html lang="en"> 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="poker.css">
-    <style>
-        #window {
-            display:flex;
-            height:87vh;
-            justify-content:center;
-            
-        }
-        #log_in_window {
-            display:flex;
-            background-color:#C880B7;
-            height:400px;
-            width:300px;
-            flex-direction:column;
-            align-items:center;
-            border-radius:25px;
-            justify-content:space-around;
-            font-family:Verdana, Geneva, Tahoma, sans-serif
-        }
-        .container {
-            display:flex;
-            flex-direction:column;
-        }
-    </style> 
-</head>
-<body>
-    <div class="container">
-        <nav class="navbar navbar-expand-sm k navbar-dark">
-            <a class="navbar-brand" href="#">
-              <img src="https://i.ibb.co/YpxVHWH/image.png" alt="logo" style="width:40px;">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <!-- Links -->  
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Hands</a>
-              </li> 
-              <li class="nav-item">
-                <a class="nav-link" href="#">Rules</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Tutorial</a>
-              </li>
-              </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Log in</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Register</a>
-            </ul>
-            </div>
-          </nav>    
-        <div id="window">
-            <div id="log_in_window">
-                <div><b>Register</b></div>
-                <div>
-                    <div>Username</div>
-                    <div><input id="username_input"></div>
-                    <div>Password</div>
-                    <div><input type="password" id="password_input"></div>
-                    <div>Repeat Password</div>
-                    <div><input type="password" id="repeat_password_input"></div>
-                    <div>Email</div>
-                    <div><input id="email_input"></div>
-                    
-                </div>
-                <div><button>Submit</button></div>
-                <div>Forget password? Click here!</div>
-                
-            </div>
-            
-        </div>
-    </div>
-</body>
-<script>
+{% extends "base.html" %}
 
-</script> 
-</html>
+{% block title %}Register{% endblock%}
+{% block head %}
+  {{ super() }}
+  <style type="text/css">
+    #opening_window {
+        height:87vh;
+    }
+    #register_window {
+        display:flex;
+        background-color:#C880B7;
+        height:450px;
+        width:300px;
+        flex-direction:column;
+        align-items:center;
+        border-radius:25px;
+        justify-content:space-around;
+        font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+  </style>
+{% endblock %}
+
+{% block content %}
+    <div id="register_window">
+        <div style="font-size:50px">Register</div>
+        <div>
+            <div style="margin-bottom:5px;">Username</div>
+            <div style="margin-bottom:5px;"><input id="username_input"></div>
+            <div style="margin-bottom:5px;">Password</div>
+            <div style="margin-bottom:5px;"><input type="password" id="password_input"></div>
+            <div style="margin-bottom:5px;">Repeat Password</div>
+            <div style="margin-bottom:5px;"><input type="password" id="password2_input"></div>
+            <div style="margin-bottom:5px;">Email</div>
+            <div style="margin-bottom:5px;"><input id="email_input"></div>                             
+        </div>
+        <div><button>Create Account</button></div>
+    </div>
+{% endblock %}
