--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/poker.css') }}">
+    <link rel="icon" type="image/png" href="/static/favicon.png"/>
     <title>{% block title %}{% endblock %}</title>
     {% block script %}
     {% endblock %}
@@ -19,7 +20,7 @@
 
   <div class="container"> 
     <nav class="navbar navbar-expand-sm k navbar-dark">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/index">
         <img src="https://i.ibb.co/YpxVHWH/image.png" alt="logo" style="width:40px;">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -29,22 +30,22 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Hands</a>
+          <a class="nav-link" href="/hands">Hands</a>
         </li> 
         <li class="nav-item">
           <a class="nav-link" href="#">Rules</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Tutorial</a>
+          <a class="nav-link" href="/tutorial">Tutorial</a>
         </li>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Log in</a>
+          <a class="nav-link" href="/login">Log in</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Register</a>
+          <a class="nav-link" href="/register">Register</a>
       </ul>
       </div>
     </nav>    
