--- a/app/templates/tutorial.html
+++ b/app/templates/tutorial.html
@@ -190,6 +190,10 @@
             replaceCards(genHand(num));
         }
         else {
+            element = document.getElementById("inp");
+            element.className="right";
+            void element.offsetWidth;
+            element.className="wrong";
             var wrong = Number(document.getElementById("wrong").innerHTML);
             document.getElementById("wrong").innerHTML = wrong + 1;
         }
@@ -207,25 +211,51 @@
 {% block head %}
     {{ super() }}
     <style>
+        #opening_window {
+            height:80vh;
+            width:100%;
+          } 
+        #continue {
+            margin-top: auto;
+            background-color: rgba(0, 0, 255, 0.0);
+            border: none;
+            color:#F5CCE8;
+        }
         img { 
             width:100px; /*styling the cards*/
+        }
+        .wrong {
+        animation: shake 0.2s;
+        }   
+        @keyframes shake {
+        0% { transform: translate(1px, 1px) rotate(0deg); }
+        20% { transform: translate(-1px, -2px) rotate(-1deg); }
+        40% { transform: translate(-3px, 0px) rotate(1deg); }
+        60% { transform: translate(3px, 2px) rotate(0deg); }
+        80% { transform: translate(1px, -1px) rotate(1deg); }
+        100% { transform: translate(-1px, 2px) rotate(-1deg); }
         }
     </style>
 {% endblock %}
 
 {% block content %}
-    <div style="display:flex;flex-direction:row;">
-        <img class="cardimg" src="/static/deck/14c.png">
-        <img class="cardimg" src="/static/deck/13c.png">
-        <img class="cardimg" src="/static/deck/12d.png">
-        <img class="cardimg" src="/static/deck/6c.png">
-        <img class="cardimg" src="/static/deck/14c.png">
-        <input id="inp">
-        <button id="butt1" onclick="checkAnswer()">Hey! Press</button>
-        <div style="display:flex;flex-direction:column;">
-            <div>Right: <div id="right">0</div></div>
-            <div>Wrong: <div id="wrong">0</div></div>
+    <div id="progress"></div>
+    <div style="display:flex;flex-direction:row;justify-content:space-between;width:725px;">
+        <div id = "welcome_text" style="display:flex;flex-direction:column;height:400px; width:150px; background-color:#644064;border-radius:15px;padding:15px;">
+            <p id="boxtext">Welcome to the world of Poker!</p>
+            <button id="continue"><b>Continue</b></button>
         </div>
+        <div style="display:flex;flex-direction:column;justify-content:space-around;border-radius:15px;background-color:#B78FB7; width:550px; height: 400px; align-items:center">
+            <div style="display:none" id="cards">
+                <img class="cardimg" src="/static/deck/14c.png">
+                <img class="cardimg" src="/static/deck/13c.png">
+                <img class="cardimg" src="/static/deck/12d.png">
+                <img class="cardimg" src="/static/deck/6c.png">
+                <img class="cardimg" src="/static/deck/14c.png">    
+            </div>
+        </div>
+    </div>
+
     <script>
         var inp = document.getElementById("inp");
         inp.addEventListener("keyup", function(event) {
@@ -236,5 +266,4 @@
             }
         );
     </script>
-    </div>
 {% endblock %}
