--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -61,22 +61,11 @@
     <div class="flip-card">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="https://i.ibb.co/W2Mx8GH/hands.png" alt="Avatar" style="width:150px">
+          <img src="https://i.ibb.co/1zGkZHV/statistics.png" alt="Statistics" style="width:150px">
         </div>
         <div class="flip-card-back">
-          <h1>Hands</h1>
-          <p>A helpful resource for all poker hands.</p>
-        </div>
-      </div>
-    </div>
-    <div class="flip-card">
-      <div class="flip-card-inner">
-        <div class="flip-card-front">
-          <img src="https://i.ibb.co/vVhmzbQ/rules.png" alt="Avatar" style="width:150px">
-        </div>
-        <div class="flip-card-back">
-          <h1>Rules</h1>
-          <p>A helpful resource for all poker rules</p>
+          <h1><a href='/statistics'>Statistics</a></h1>
+          <p>Check your stats on our award-winning game!</p>
         </div>
       </div>
     </div>
@@ -86,7 +75,7 @@
           <img src="https://i.ibb.co/XJRjgxV/play.png" alt="Avatar" style="width:150px">
         </div>
         <div class="flip-card-back">
-          <h1>Tutorial</h1>
+          <h1><a href='/tutorial'>Tutorial</a></h1>
           <p>A helpful resource for learning all of this together!</p>
         </div>
       </div>
