--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,14 +30,10 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/hands">Hands</a>
-        </li> 
-        <li class="nav-item">
-          <a class="nav-link" href="#">Rules</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="/tutorial">Tutorial</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/statistics">Statistics</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto">
