--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,6 @@
     {% endblock %}
 </head>
 <body>
-
   <div class="container"> 
     <nav class="navbar navbar-expand-sm k navbar-dark">
       <a class="navbar-brand" href="/index">
@@ -42,8 +41,18 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/register">Register</a>
+        </li>
       </ul>
       </div>
+      <!-- loged in navbar 
+        <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/mystats">My Stats</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Log Out</a>
+      </ul>
+      -->
     </nav>    
     <div id="opening_window">
       {% block content %}
