--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -1,3 +1,4 @@
+  
 {% extends "base.html" %}
 
 {% block title %}Home{% endblock%}
@@ -8,5 +9,15 @@
 {% endblock %}
 
 {% block content %}
+    <h1>Statistics</h1>
+    <div class=container>
+        <h2>Your Statistics</h2>
+        {% for result in tutorial_results %}
+            <p>{{ result }}</p>
+        <h2>High Scores</h2>
+        {% for i in range 10 %}
+            <p>{{highscores[i]}}</p>
+        <h2>Number of Users - {{numUsers}}</h2>
+    </div>
 
 {% endblock %}
