--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,6 +35,16 @@
           <a class="nav-link" href="/statistics">Statistics</a>
         </li>
       </ul>
+      {% if user.is_authenticated %}
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/feedback">Feedback</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Logout">Logout</a>
+        </li>
+      </ul>
+      {% else %}
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="/login">Log in</a>
@@ -43,6 +53,7 @@
           <a class="nav-link" href="/register">Register</a>
         </li>
       </ul>
+      {% endif %}
       </div>
       <!-- loged in navbar 
         <ul class="navbar-nav ml-auto">
