--- a/app/templates/feedback.html
+++ b/app/templates/feedback.html
@@ -41,7 +41,7 @@
         <div id = "feedbackform">
         <h3>Please consider leaving some feedback as to what you enjoyed, </br>
             And what we could improve on. </h3>
-            <form action="", method = "post" onsubmit="feedbacksubmit()">
+            <form action="", method = "post" >
                <h3><label for"feedback">Place feedback in area below</label></h2>
                <textarea rows="6" cols="80" name="feedback" id="feedback" required></textarea>
                <div class="submitbutton">
