--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -1,7 +1,7 @@
   
 {% extends "base.html" %}
 
-{% block title %}Home{% endblock%}
+{% block title %}Statistics{% endblock%}
 {% block head %}
   {{ super() }}
 <style>
