--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -23,15 +23,44 @@
 
 {% block content %}
     <div id="log_in_window">
-        <div style="font-size:50px">Log In</div>
-        <div>
-            <div style="margin-bottom:5px;">Username</div>
-            <div style="margin-bottom:5px;"><input id="username_input"></div>
-            <div style="margin-bottom:5px;">Password</div>
-            <div style="margin-bottom:5px;"><input type="password" id="password_input"></div>
+        <form action="",  method="post" novalidate>
+            {{form.hidden_tag()}}
+            
+            <div style="font-size:50px">Log In</div>
+            <div style="font-size:50px">Enter details</div>
+          
+            <div>
+                  {{form.username.label}}<br>
+                  {{form.username(size=32)}}
+                  {% for error in form.username.errors %}
+                  <span class="error" style="color:black;">[{{error}}]</span>
+                  {%endfor%}
+            </div>
+            <div>
+                  {{ form.password.label }}<br>
+                  {{ form.password(size=32) }}
+                  {% for error in form.password.errors %}
+                  <span class="error" style="color:black;">[{{error}}]</span>
+                  {%endfor%}
+            </div>
+            
+            <div>
+                {{form.remember_me.label}} {{form.remember_me()}} 
+            </div>
+            <div>
+                {{form.submit()}}
+            </div> 
+      </form>   
+            <div>
+                <div style="margin-bottom:5px;">Username</div>
+                <div style="margin-bottom:5px;"><input id="username_input"></div>
+                <div style="margin-bottom:5px;">Password</div>
+                <div style="margin-bottom:5px;"><input type="password" id="password_input"></div>
             
         </div>
         <div><button>Submit</button></div>
+        <div>
+          <p><a href="{{ url_for('register') }}"> Click to register </a></p>
         <div>Forget password? Click <a href=#><b>here!</b></a></div>
     </div>
 {% endblock %}
