--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -24,16 +24,49 @@
 {% block content %}
     <div id="register_window">
         <div style="font-size:50px">Register</div>
-        <div>
-            <div style="margin-bottom:5px;">Username</div>
-            <div style="margin-bottom:5px;"><input id="username_input"></div>
-            <div style="margin-bottom:5px;">Password</div>
-            <div style="margin-bottom:5px;"><input type="password" id="password_input"></div>
-            <div style="margin-bottom:5px;">Repeat Password</div>
-            <div style="margin-bottom:5px;"><input type="password" id="password2_input"></div>
-            <div style="margin-bottom:5px;">Email</div>
-            <div style="margin-bottom:5px;"><input id="email_input"></div>                             
-        </div>
+            <form action="" method="post">
+                {{form.hidden_tag()}}
+                <div>
+                  <p> Enter your details to create an account</p>
+                </div>
+                <div>
+                    <div style="margin-bottom:5px;"> {{form.username.label}} </div>
+                  
+                    <div style="margin-bottom:5px;"><input id="username_input"> {{form.username(size=32)}} </div>
+                  
+                    {% for error in form.username.errors%}
+                    <span class="error" style="color: black;">[{{ error }}]</span>
+                    {% endfor %}
+                  
+                    <div style="margin-bottom:5px;"> {{ form.email.label }} </div>
+                  
+                    <div style="margin-bottom:5px;"><input id="email_input"> {{ form.email(size=64) }} </div>  
+                  
+                    {% for error in form.email.errors%}
+                    <span class="error" style="color: black;">[{{ error }}]</span>
+                    {% endfor %}
+                  
+                    <div style="margin-bottom:5px;"> {{ form.password.label }} </div>
+                  
+                    <div style="margin-bottom:5px;"><input type="password" id="password_input"> {{ form.password(size=32) }} </div>
+                    
+                    {% for error in form.password.errors%}
+                    <span class="error" style="color: black;">[{{ error }}]</span>
+                    {% endfor %}
+
+                    <div style="margin-bottom:5px;"> {{ form.password2.label }} </div>
+                    <div style="margin-bottom:5px;"><input type="password" id="password2_input"> {{ form.password2(size=32) }} </div>
+                    
+                    {% for error in form.password2.errors%}
+                    <span class="error" style="color: black;">[{{ error }}]</span>
+                    {% endfor %}
+                            
+                    <div>
+                        {{ form.submit() }}
+                  </div>
+                  
+              </div>
+          </form>
         <div><button>Create Account</button></div>
     </div>
 {% endblock %}
