--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -27,8 +27,9 @@
                 </div>
             </div>
             {% endfor %} 
-              <button>
-        Think you've got it...? Take the quiz!</button>
+            <div>
+                <input type = "submit" value="submit">
+            </div>      
         </form>     
     </div>
 {% endblock %}
