--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -63,7 +63,7 @@
           <img src="https://i.ibb.co/1zGkZHV/statistics.png" alt="Statistics" style="width:150px">
         </div>
         <div class="flip-card-back">
-          <h1><a href='/statistics'>Statistics</a></h1>
+          <h1><a href='/feedback'>Feedback</a></h1>
           <p>Check your stats on our award-winning game!</p>
         </div>
       </div>
@@ -81,3 +81,4 @@
     </div>
   </div>
 {% endblock %}
+
