--- a/app/templates/tutorial.html
+++ b/app/templates/tutorial.html
@@ -392,7 +392,7 @@
             if (line == 32) {
                 $("#boxtext").html("Now, check out the rules at <a href='/rules'>and get ready for the quiz!</a>");        
                 document.getElementById("continue").removeEventListener("click",continueGame);
-                document.getElementById("continue").setAttribute("onclick",location.href={{ url_for('register') }});
+                document.getElementById("continue").setAttribute("onclick",location.href='/rules');
                 return;
             }
             $("#boxtext").fadeOut(500);
