--- a/app/templates/feedback.html
+++ b/app/templates/feedback.html
@@ -10,31 +10,13 @@
 {% block content %}
     <!-- link href = " whatever style or something" -->
     <div class="page">
-        <h1> results </h1>
+        <h1> Results </h1>
             {% if result%}
-                <h2>Welcome {{current_user.username}}! </br>
-                    Thanks for taking your time to do our quiz </br>
-                    {% if {{percentage}} >= 75 %}
-                        <h3> You are amazing at poker, </br>
-                              You got a {{result}} out of {{sum}}, {{percentage}}% </br>
-                             Perhaps you should go pro!
-                        </h3>
-                    {% if 50 <= {{percentage}} <75 %}
-                        <h3> You did pretty well, </br>
-                             You got a {{result}} out of {{sum}}, {{percentage}}%. </br>
-                             Continue practising to be the best!
-                        </h3>
-                    {% if 25 <= {{percentage}} <50 %}
-                        <h3> Nice try!, </br>
-                             You got a {{result}} out of {{sum}}, {{percentage}}%. </br>
-                             Maybe try going over the tutorial again, and keep practising. You got this!
-                        </h3>
-                    {% if {{percentage}} <25 %}
-                        <h3> Damn, you suck! But in a good way. </br>
-                             You got a {{result}} out of {{sum}}, {{percentage}}%. </br>
-                             Ur clapped get good.
-                        </h3>
-                  </h2>
+                <h3>Welcome {{current_user.username}}! </br>
+                    Thanks for taking your time to do our quiz. </br>
+                    You got a {{result}} out of {{sum}}, {{percentage}}%! <br>
+                    If you keep practising you will improve!
+                  </h3>
             {% else %}
                 <h3> Please complete the quiz to view your results! </h3>
             {%endif%}
